--- a/styles/partials/_fonts.scss
+++ b/styles/partials/_fonts.scss
@@ -1,7 +1,8 @@
 /* Regular */
 @font-face {
   font-family: "Avenir Next";
-  src: url("../../assets/fonts/avenir-next-regular.ttf") format("truetype");
+  src: url("../../assets/fonts/avenir-next-regular.otf") format("opentype"),
+    url("../../assets/fonts/avenir-next-regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
@@ -9,7 +10,8 @@
 /* Demi */
 @font-face {
   font-family: "Avenir Next";
-  src: url("../../assets/fonts/avenir-next-demi.ttf") format("truetype");
+  src: url("../../assets/fonts/avenir-next-demi.otf") format("opentype"),
+    url("../../assets/fonts/avenir-next-demi.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
@@ -17,7 +19,8 @@
 /* Bold */
 @font-face {
   font-family: "Avenir Next";
-  src: url("../../assets/fonts/avenir-next-bold.ttf") format("truetype");
+  src: url("../../assets/fonts/avenir-next-bold.otf") format("opentype"),
+    url("../../assets/fonts/avenir-next-bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
