--- a/styles/partials/components/_mainContent.scss
+++ b/styles/partials/components/_mainContent.scss
@@ -73,54 +73,64 @@
 }
 
 /* styles for main content on tablet device */
-// @include breakpoint.medium {
-//   .hero {
-//     &__title {
-//       @include mixins.title(colors.$white, 3.75rem, 4.25rem, 700);
-//       padding-left: 1rem;
-//     }
-//   }
-//   .about {
-//     padding: 0 2.25rem;
+@include breakpoint.medium {
+  .hero {
+    &__title {
+      @include mixins.title(colors.$white, 3.75rem, 4.25rem, 700);
+      padding-left: 1rem;
+    }
+  }
+  .about {
+    padding: 0 2.25rem;
 
-//     &__title {
-//       @include mixins.title(colors.$bandsite-black, 2.25rem, 2.75rem, 700);
-//       padding: 3rem 0 2.25rem;
-//     }
+    &__title {
+      @include mixins.title(colors.$bandsite-black, 2.25rem, 2.75rem, 700);
+      padding: 3rem 0 2.25rem;
+    }
 
-//     &__subtitle {
-//       @include mixins.title(colors.$bandsite-black, 1.5rem, 2rem, 600);
-//       // padding-top: 2.25rem;
-//       padding: 2.25rem 0;
-//     }
+    &__subtitle {
+      @include mixins.title(colors.$bandsite-black, 1.5rem, 2rem, 600);
+      // padding-top: 2.25rem;
+      padding: 2.25rem 0;
+    }
 
-//     &__content {
-//       @include mixins.title(colors.$bandsite-black, 1.5rem, 2rem, 600);
-//       padding-top: 2.25rem;
-//     }
+    &__container {
+      padding: 0 5rem;
+    }
 
-//     &__text-container {
-//       display: flex;
-//       gap: 2.25rem;
-//     }
+    &__content {
+      @include mixins.title(colors.$bandsite-black, 1.5rem, 2rem, 600);
+      padding-top: 2.25rem;
+    }
 
-//     &__text {
-//       @include mixins.title(colors.$bandsite-black, 0.875rem, 1.375rem, 400);
-//       padding: 0;
-//     }
-//   }
+    &__text-container {
+      display: flex;
+      gap: 2.25rem;
+    }
 
-//   .photo {
-//     padding: 0 2.25rem;
+    &__text {
+      @include mixins.title(colors.$bandsite-black, 0.875rem, 1.375rem, 400);
+      padding: 0;
+    }
+  }
 
-//     &__title {
-//       @include mixins.title(colors.$bandsite-black, 2.25rem, 2.75rem, 700);
+  .photo {
+    padding: 0 2.25rem;
 
-//       padding: 3rem 0 2.25rem;
-//     }
+    &__title {
+      @include mixins.title(colors.$bandsite-black, 2.25rem, 2.75rem, 700);
 
-//     &__container {
-//       display: flex;
-//     }
-//   }
-// }
+      padding: 3rem 0 2.25rem;
+    }
+
+    &__container {
+      @include mixins.flexed();
+      flex-wrap: wrap;
+    }
+
+    &__image {
+      width: 33%;
+      padding: 0.5rem;
+    }
+  }
+}
