--- a/styles/partials/components/_footer.scss
+++ b/styles/partials/components/_footer.scss
@@ -30,6 +30,7 @@
     @include mixins.title(colors.$white, 0.8125rem, 1.125rem, 400);
     margin: 0;
     padding-bottom: 1rem;
+    text-decoration: none;
   }
 }
 
@@ -50,12 +51,13 @@
     }
 
     &__contact-container {
-      display: flex;
+      @include mixins.flexed(flex-start, null);
+      gap: 4.5rem;
     }
 
-    &__contact {
-      flex-grow: 1;
-    }
+    // &__contact {
+    //   flex-grow: 1;
+    // }
 
     &__text {
       @include mixins.title(null, 0.875rem, 1.25rem, null);
