--- a/styles/partials/components/_mainContent.scss
+++ b/styles/partials/components/_mainContent.scss
@@ -10,7 +10,7 @@
       rgba(50, 50, 50, 0.5)
     ),
     url(../../../assets/images/hero-bio.jpg);
-  background-color: rgba(50, 50, 50, 0.5);
+  // background-color: rgba(50, 50, 50, 0.5);
   background-position: center;
   background-size: cover;
   padding: 6rem 0;
