--- a/styles/partials/components/_showContent.scss
+++ b/styles/partials/components/_showContent.scss
@@ -18,6 +18,7 @@
     @include mixins.title(colors.$white, 1.5rem, 2rem, 700);
     margin: 0;
     padding: 1rem 0;
+    max-width: 16rem;
   }
 
   &__subtitle {
@@ -27,7 +28,7 @@
   }
 
   &__iframe {
-    max-width: 18rem;
+    max-width: 17rem;
     height: 10rem;
     padding-bottom: 1rem;
   }
@@ -44,8 +45,11 @@
 }
 
 .ticket {
-  border-bottom: 0.0625rem solid colors.$mercury;
-  margin-bottom: 1rem;
+  // border-bottom: 0.0625rem solid colors.$mercury;
+  // margin-bottom: 1rem;
+  &:hover {
+    background-color: colors.$alabaster;
+  }
 
   &__title {
     @include mixins.title(colors.$silver, 0.875rem, 1.375rem);
@@ -68,10 +72,74 @@
     display: block;
     background-color: colors.$bandsite-black;
     border-radius: 0.25rem;
-    width: 90%;
-    padding: 0.8125rem 0.875rem;
+    min-height: 2.5rem;
+    padding: 0.875rem 2rem;
     text-decoration: none;
     text-align: center;
-    margin: 0 auto 1rem;
+    margin: 0 1rem;
+  }
+
+  &__divider {
+    border: 0.0625rem solid colors.$mercury;
+    margin: 1rem 0;
+  }
+}
+
+/* styles for show content on tablet device */
+@include breakpoint.medium {
+  .hero {
+    padding: 0 2.25rem;
+
+    &__title {
+      @include mixins.title(null, 3.75rem, 4.25rem, 600);
+      max-width: 35rem;
+      padding: 2.25rem 0;
+    }
+
+    &__subtitle {
+      @include mixins.title(null, 1.5rem, 2rem, 600);
+      padding-top: 3rem;
+    }
+
+    &__iframe {
+      // max-width: 50rem;
+      padding-bottom: 2.25rem;
+    }
+  }
+
+  .show {
+    padding: 0 2.25rem 2.25rem;
+    &__title {
+      @include mixins.title(null, 2.25rem, 2.75rem, 600);
+      margin: 0;
+      padding: 3rem 0 2.25rem;
+    }
+  }
+
+  .ticket {
+    @include mixins.flexed(space-between, baseline);
+    padding: 1rem 0;
+
+    &__title {
+      display: none;
+    }
+
+    &__text {
+      @include mixins.title(null, 0.875rem, 1.375rem, null);
+      padding: 0;
+      width: 100%;
+    }
+
+    &__button {
+      @include mixins.title(null, 0.875rem, null, null);
+      width: 100%;
+      min-height: 2.5rem;
+      // padding: 0.5rem 5rem;
+      text-align: center;
+      margin: 0;
+    }
+    &__divider {
+      margin: 0;
+    }
   }
 }
