--- a/styles/shows.css
+++ b/styles/shows.css
@@ -117,6 +117,7 @@
   font-weight: 700;
   margin: 0;
   padding: 1rem 0;
+  max-width: 16rem;
 }
 .hero__subtitle {
   color: #ffffff;
@@ -126,7 +127,7 @@
   padding-top: 1.5rem;
 }
 .hero__iframe {
-  max-width: 18rem;
+  max-width: 17rem;
   height: 10rem;
   padding-bottom: 1rem;
 }
@@ -140,9 +141,8 @@
   padding: 1.5rem 1rem 1rem;
 }
 
-.ticket {
-  border-bottom: 0.0625rem solid #e1e1e1;
-  margin-bottom: 1rem;
+.ticket:hover {
+  background-color: #fafafa;
 }
 .ticket__title {
   color: #afafaf;
@@ -170,13 +170,153 @@
   display: block;
   background-color: #323232;
   border-radius: 0.25rem;
-  width: 90%;
-  padding: 0.8125rem 0.875rem;
+  min-height: 2.5rem;
+  padding: 0.875rem 2rem;
   text-decoration: none;
   text-align: center;
-  margin: 0 auto 1rem;
+  margin: 0 1rem;
+}
+.ticket__divider {
+  border: 0.0625rem solid #e1e1e1;
+  margin: 1rem 0;
 }
 
+/* styles for show content on tablet device */
+@media only screen and (min-width: 768px) {
+  .hero {
+    padding: 0 2.25rem;
+  }
+  .hero__title {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+    font-weight: 600;
+    max-width: 35rem;
+    padding: 2.25rem 0;
+  }
+  .hero__subtitle {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 600;
+    padding-top: 3rem;
+  }
+  .hero__iframe {
+    padding-bottom: 2.25rem;
+  }
+  .show {
+    padding: 0 2.25rem 2.25rem;
+  }
+  .show__title {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 600;
+    margin: 0;
+    padding: 3rem 0 2.25rem;
+  }
+  .ticket {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 1rem 0;
+  }
+  .ticket__title {
+    display: none;
+  }
+  .ticket__text {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    padding: 0;
+    width: 100%;
+  }
+  .ticket__button {
+    font-size: 0.875rem;
+    width: 100%;
+    min-height: 2.5rem;
+    text-align: center;
+    margin: 0;
+  }
+  .ticket__divider {
+    margin: 0;
+  }
+}
+/* styles for footer for mobile */
+.footer {
+  background-color: #323232;
+  padding: 0 1rem 1rem;
+}
+.footer__container {
+  padding-bottom: 1rem;
+}
+.footer__title {
+  color: #ffffff;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 600;
+  margin: 0;
+  padding: 1.5rem 0 1rem;
+}
+.footer__icon {
+  padding-right: 2rem;
+}
+.footer__logo {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+}
+.footer__text {
+  color: #ffffff;
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  margin: 0;
+  padding-bottom: 1rem;
+  text-decoration: none;
+}
+
+/* styles for footer on tablet device */
+@media only screen and (min-width: 768px) {
+  .footer {
+    padding: 0 2.25rem 2.25rem;
+    position: relative;
+  }
+  .footer__container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: baseline;
+    padding: 0;
+  }
+  .footer__title {
+    color: #ffffff;
+    font-size: 2.25rem;
+    font-weight: 600;
+    padding: 3rem 2.25rem 2.25rem 0;
+  }
+  .footer__contact-container {
+    display: flex;
+    justify-content: flex-start;
+    gap: 4.5rem;
+  }
+  .footer__text {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    padding-bottom: 2.25rem;
+  }
+  .footer__text--title {
+    font-weight: 600;
+  }
+  .footer__logo {
+    position: absolute;
+    top: 1.5rem;
+    right: 3rem;
+  }
+}
+/* styles for header on desktop */
+@media only screen and (min-width: 1280px) {
+  .footer {
+    padding: 0 6rem 2.25rem;
+  }
+  .footer__logo {
+    right: 7rem;
+  }
+}
 html,
 body {
   box-sizing: border-box;
