--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -1,7 +1,7 @@
 @use "./partials/fonts";
 @use "./partials/components/header";
 @use "./partials/components/showContent";
-// @use "./partials/components/footer";
+@use "./partials/components/footer";
 
 html,
 body {
