--- a/styles/partials/components/_header.scss
+++ b/styles/partials/components/_header.scss
@@ -22,7 +22,6 @@
   }
 
   &__menu-item {
-    // width: 50%;
     flex: 0.5;
     text-align: center;
   }
@@ -40,6 +39,7 @@
     }
 
     &--active {
+      color: colors.$white;
       border-bottom: 0.2rem solid colors.$white;
     }
   }
