--- a/styles/partials/components/_showContent.scss
+++ b/styles/partials/components/_showContent.scss
@@ -58,6 +58,10 @@
 
   &--selected {
     background-color: colors.$mercury;
+
+    &:hover {
+      background-color: colors.$mercury;
+    }
   }
 
   &__title {
@@ -70,10 +74,10 @@
     @include mixins.title(colors.$bandsite-black, 0.8125rem, 1.375rem, 400);
     margin: 0;
     padding: 0 1rem 1rem;
+  }
 
-    &--strong {
-      font-weight: 600;
-    }
+  &__text-strong {
+    font-weight: 600;
   }
 
   &__button {
