--- a/styles/shows.css
+++ b/styles/shows.css
@@ -62,6 +62,7 @@
   border-bottom: 0.2rem solid #ffffff;
 }
 .header__menu-item-link--active {
+  color: #ffffff;
   border-bottom: 0.2rem solid #ffffff;
 }
 
@@ -150,6 +151,9 @@
 .ticket--selected {
   background-color: #e1e1e1;
 }
+.ticket--selected:hover {
+  background-color: #e1e1e1;
+}
 .ticket__title {
   color: #afafaf;
   font-size: 0.875rem;
@@ -166,7 +170,7 @@
   margin: 0;
   padding: 0 1rem 1rem;
 }
-.ticket__text--strong {
+.ticket__text-strong {
   font-weight: 600;
 }
 .ticket__button {
@@ -297,6 +301,9 @@
 .footer__container {
   padding-bottom: 1rem;
 }
+.footer__contact {
+  padding-bottom: 1rem;
+}
 .footer__title {
   color: #ffffff;
   font-size: 1.5rem;
@@ -318,8 +325,10 @@
   line-height: 1.125rem;
   font-weight: 400;
   margin: 0;
-  padding-bottom: 1rem;
   text-decoration: none;
+}
+.footer__spacing {
+  margin: 0 solid #323232;
 }
 
 /* styles for footer on tablet device */
@@ -348,9 +357,8 @@
   .footer__text {
     font-size: 0.875rem;
     line-height: 1.25rem;
-    padding-bottom: 2.25rem;
   }
-  .footer__text--title {
+  .footer__text-title {
     font-weight: 600;
   }
   .footer__logo {
