--- a/styles/partials/components/_mainContent.scss
+++ b/styles/partials/components/_mainContent.scss
@@ -21,7 +21,7 @@
 }
 
 .about {
-  padding: 0 1rem;
+  padding: 0 1rem 1rem;
 
   &__title {
     @include mixins.title(colors.$bandsite-black, 1.5rem, 2rem, 700);
@@ -58,6 +58,7 @@
 
 .photo {
   padding: 0 1rem;
+  background-color: #fafafa;
 
   &__title {
     @include mixins.title(colors.$bandsite-black, 1.5rem, 2rem, 700);
@@ -80,6 +81,10 @@
 .comment {
   padding: 0 1rem;
 
+  &__outer-container {
+    margin: 0 auto;
+  }
+
   &__section-title {
     @include mixins.title(colors.$bandsite-black, 1.5rem, 2rem, 700);
     margin: 0;
@@ -88,14 +93,12 @@
 
   &__container {
     display: flex;
-  }
-
-  &__left {
-    width: 15%;
+    justify-content: center;
+    gap: 1rem;
   }
 
   &__right {
-    width: 85%;
+    width: 100%;
   }
 
   &__add {
@@ -119,6 +122,8 @@
 
   &__input {
     font-family: "Avenir Next", Arial, Helvetica, sans-serif;
+    color: colors.$bandsite-black;
+    background-color: colors.$alabaster;
     width: 100%;
     height: 2.25rem;
     border-radius: 0.25rem;
@@ -131,7 +136,8 @@
     }
 
     &--large {
-      height: 4.5rem;
+      height: 8rem;
+      resize: none;
     }
 
     &--error {
@@ -149,6 +155,7 @@
     text-decoration: none;
     text-align: center;
     margin-bottom: 1rem;
+    border: none;
 
     &:hover {
       background-color: colors.$bandsite-darkblack;
@@ -158,6 +165,10 @@
   &__divider {
     border: 0.0625rem solid colors.$mercury;
     margin: 0.5rem 0;
+  }
+
+  &__list {
+    padding-bottom: 1rem;
   }
 
   &__group-container {
@@ -189,7 +200,7 @@
     }
   }
   .about {
-    padding: 0 2.25rem;
+    padding: 0 2.25rem 2.25rem;
 
     &__title {
       @include mixins.title(colors.$bandsite-black, 2.25rem, 2.75rem, 700);
@@ -198,7 +209,6 @@
 
     &__subtitle {
       @include mixins.title(colors.$bandsite-black, 1.5rem, 2rem, 600);
-      // padding-top: 2.25rem;
       padding: 2.25rem 0;
     }
 
@@ -227,7 +237,6 @@
 
     &__title {
       @include mixins.title(colors.$bandsite-black, 2.25rem, 2.75rem, 700);
-
       padding: 3rem 0 2.25rem;
     }
 
@@ -242,9 +251,32 @@
       flex-grow: 1;
     }
   }
+
+  .comment {
+    padding: 0 36px;
+
+    &__section-title {
+      @include mixins.title(colors.$bandsite-black, 2.25rem, 2.75rem, 700);
+      padding: 3rem 0 2.25rem;
+    }
+
+    &__outer-container {
+      padding: 0 4rem;
+    }
+
+    &__avatar {
+      width: 3rem;
+      height: 3rem;
+    }
+
+    &__button {
+      margin-left: auto;
+      width: 9.375rem;
+    }
+  }
 }
 
-/* styles for header on desktop */
+/* styles for hero on desktop */
 @include breakpoint.large {
   .hero {
     &__title {
@@ -264,5 +296,13 @@
 
   .photo {
     padding: 0 6rem 2.25rem;
+  }
+
+  .comment {
+    padding: 0 6rem;
+
+    &__outer-container {
+      max-width: 40rem;
+    }
   }
 }
