fix issues reported in the transcript

--- a/styles/partials/_colors.scss
+++ b/styles/partials/_colors.scss
@@ -1,10 +1,10 @@
 /* Primary colors */
-$bandsite-black: #323232;
-$silver: #afafaf;
-$white: #ffffff;
+$color-primary-dark: #323232;
+$color-text-primary: #ffffff;
+$color-text-secondary: #afafaf;
 
 /* Secondary colors */
-$bandsite-darkblack: #000000;
-$mercury: #e1e1e1;
-$alabaster: #fafafa;
-$error: #d22d2d;
+$color-cta-hover: #000000;
+$color-ui-secondary: #e1e1e1;
+$color-background-secondary: #fafafa;
+$color-ui-danger: #d22d2d;
