--- a/styles/partials/components/_mainContent.scss
+++ b/styles/partials/components/_mainContent.scss
@@ -15,7 +15,7 @@
   padding: 6rem 0;
 
   &__title {
-    @include mixins.title(colors.$white, 1.5rem, 2rem, 700);
+    @include mixins.title(colors.$color-text-primary, 1.5rem, 2rem, 700);
     padding-left: 1rem;
   }
 }
@@ -24,13 +24,13 @@
   padding: 0 1rem 1rem;
 
   &__title {
-    @include mixins.title(colors.$bandsite-black, 1.5rem, 2rem, 700);
+    @include mixins.title(colors.$color-primary-dark, 1.5rem, 2rem, 700);
     margin: 0;
     padding: 1.5rem 0 1rem;
   }
 
   &__subtitle {
-    @include mixins.title(colors.$bandsite-black, 0.875rem, 1.375rem, 600);
+    @include mixins.title(colors.$color-primary-dark, 0.875rem, 1.375rem, 600);
     margin: 0;
     padding-top: 1rem;
   }
@@ -40,13 +40,13 @@
   }
 
   &__content {
-    @include mixins.title(colors.$bandsite-black, 0.875rem, 1.375rem, 600);
+    @include mixins.title(colors.$color-primary-dark, 0.875rem, 1.375rem, 600);
     margin: 0;
     padding-top: 1rem;
   }
 
   &__text {
-    @include mixins.title(colors.$bandsite-black, 0.8125rem, 1.125rem, 400);
+    @include mixins.title(colors.$color-primary-dark, 0.8125rem, 1.125rem, 400);
     margin: 0;
     padding-top: 1rem;
 
@@ -61,7 +61,7 @@
   background-color: #fafafa;
 
   &__title {
-    @include mixins.title(colors.$bandsite-black, 1.5rem, 2rem, 700);
+    @include mixins.title(colors.$color-primary-dark, 1.5rem, 2rem, 700);
     margin: 0;
     padding: 1.5rem 0 1rem;
   }
@@ -86,7 +86,7 @@
   }
 
   &__section-title {
-    @include mixins.title(colors.$bandsite-black, 1.5rem, 2rem, 700);
+    @include mixins.title(colors.$color-primary-dark, 1.5rem, 2rem, 700);
     margin: 0;
     padding: 1.5rem 0 1rem;
   }
@@ -107,7 +107,7 @@
   }
 
   &__avatar {
-    background-color: colors.$mercury;
+    background-color: colors.$color-ui-secondary;
     border-radius: 50%;
     width: 2.25rem;
     height: 2.25rem;
@@ -116,23 +116,28 @@
   }
 
   &__title {
-    @include mixins.title(colors.$silver, 0.875rem, 1.375rem, 400);
+    @include mixins.title(
+      colors.$color-text-secondary,
+      0.875rem,
+      1.375rem,
+      400
+    );
     padding-bottom: 0.25rem;
   }
 
   &__input {
     font-family: "Avenir Next", Arial, Helvetica, sans-serif;
-    color: colors.$bandsite-black;
-    background-color: colors.$alabaster;
+    color: colors.$color-primary-dark;
+    background-color: colors.$color-background-secondary;
     width: 100%;
     height: 2.25rem;
     border-radius: 0.25rem;
     padding: 0.75rem;
-    border: 0.0625rem solid colors.$mercury;
+    border: 0.0625rem solid colors.$color-ui-secondary;
     margin-bottom: 1rem;
 
     &:focus {
-      border-color: colors.$bandsite-black;
+      border-color: colors.$color-primary-dark;
     }
 
     &--large {
@@ -141,14 +146,14 @@
     }
 
     &--error {
-      border-color: colors.$error;
+      border-color: colors.$color-ui-danger;
     }
   }
 
   &__button {
-    @include mixins.title(colors.$white, 0.8125rem, null, 400);
+    @include mixins.title(colors.$color-text-primary, 0.8125rem, null, 400);
 
-    background-color: colors.$bandsite-black;
+    background-color: colors.$color-primary-dark;
     border-radius: 0.25rem;
     min-height: 2.5rem;
     padding: 0.875rem 2rem;
@@ -158,12 +163,12 @@
     border: none;
 
     &:hover {
-      background-color: colors.$bandsite-darkblack;
+      background-color: colors.$color-cta-hover;
     }
   }
 
   &__divider {
-    border: 0.0625rem solid colors.$mercury;
+    border: 0.0625rem solid colors.$color-ui-secondary;
     margin: 0.5rem 0;
   }
 
@@ -176,7 +181,7 @@
   }
 
   &__name {
-    @include mixins.title(colors.$bandsite-black, 0.875rem, 1.375rem);
+    @include mixins.title(colors.$color-primary-dark, 0.875rem, 1.375rem);
     margin: 0;
   }
 
@@ -186,7 +191,7 @@
   }
 
   &__text {
-    @include mixins.title(colors.$bandsite-black, 0.8125rem, 1.125rem, 400);
+    @include mixins.title(colors.$color-primary-dark, 0.8125rem, 1.125rem, 400);
     margin: 0;
   }
 }
@@ -194,8 +199,10 @@
 /* styles for main content on tablet device */
 @include breakpoint.medium {
   .hero {
+    padding: 12rem 0;
+
     &__title {
-      @include mixins.title(colors.$white, 3.75rem, 4.25rem, 700);
+      @include mixins.title(colors.$color-text-primary, 3.75rem, 4.25rem, 700);
       padding-left: 1rem;
     }
   }
@@ -203,12 +210,12 @@
     padding: 0 2.25rem 2.25rem;
 
     &__title {
-      @include mixins.title(colors.$bandsite-black, 2.25rem, 2.75rem, 700);
+      @include mixins.title(colors.$color-primary-dark, 2.25rem, 2.75rem, 700);
       padding: 3rem 0 2.25rem;
     }
 
     &__subtitle {
-      @include mixins.title(colors.$bandsite-black, 1.5rem, 2rem, 600);
+      @include mixins.title(colors.$color-primary-dark, 1.5rem, 2rem, 600);
       padding: 2.25rem 0;
     }
 
@@ -217,7 +224,7 @@
     }
 
     &__content {
-      @include mixins.title(colors.$bandsite-black, 1.5rem, 2rem, 600);
+      @include mixins.title(colors.$color-primary-dark, 1.5rem, 2rem, 600);
       padding-top: 2.25rem;
     }
 
@@ -227,7 +234,12 @@
     }
 
     &__text {
-      @include mixins.title(colors.$bandsite-black, 0.875rem, 1.375rem, 400);
+      @include mixins.title(
+        colors.$color-primary-dark,
+        0.875rem,
+        1.375rem,
+        400
+      );
       padding: 0;
     }
   }
@@ -236,7 +248,7 @@
     padding: 0 2.25rem 2.25rem;
 
     &__title {
-      @include mixins.title(colors.$bandsite-black, 2.25rem, 2.75rem, 700);
+      @include mixins.title(colors.$color-primary-dark, 2.25rem, 2.75rem, 700);
       padding: 3rem 0 2.25rem;
     }
 
@@ -256,7 +268,7 @@
     padding: 0 36px;
 
     &__section-title {
-      @include mixins.title(colors.$bandsite-black, 2.25rem, 2.75rem, 700);
+      @include mixins.title(colors.$color-primary-dark, 2.25rem, 2.75rem, 700);
       padding: 3rem 0 2.25rem;
     }
 
