removed comments before merging to main branch

--- a/styles/partials/components/_showContent.scss
+++ b/styles/partials/components/_showContent.scss
@@ -91,7 +91,7 @@
   }
 
   &__divider {
-    border: 0.0625rem solid colors.$color-ui-secondary;
+    border: 1px solid colors.$color-ui-secondary;
     margin: 0.5rem 0;
   }
 }
